# bevy-jam-2

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/levels/: level1.glb
assets/shaders/: grid.wgsl  portal_closed.wgsl  portal_open.wgsl
src/: main.rs
src/plugins/: dev_plugins.rs  mod.rs
src/plugins/asset_processor/: level.rs  level_processor.rs  mod.rs
src/plugins/debug/: draw.rs  dump.rs  mod.rs
src/plugins/doors/: mod.rs
src/plugins/first_person_controller/: mod.rs
src/plugins/game/: mod.rs
src/plugins/input/: mod.rs
src/plugins/physics/: mod.rs
src/plugins/portal/: camera_projection.rs  geometry.rs  material.rs  mod.rs
src/plugins/render/: mod.rs
src/util/: mod.rs
src/util/scenes/: mod.rs
