[package]
name = "bevyjam_2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["devel"]
devel = ["editor", "bevy-inspector-egui-rapier"]
editor = ["bevy_editor_pls"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
bevy_editor_pls = { version = "0.1", optional = true }
bevy-inspector-egui-rapier = { version = "0.5", features = ["rapier3d"], optional = true }
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
bevy_rapier3d = "0.16"
euclid = "0.22"
iyes_loopless = "0.7"
leafwing-input-manager = "0.5"
noise = { version = "0.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
